--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -44,6 +44,9 @@ acronym:hover {cursor:help;}
 .col_value {padding-left:10px;width: 30%; text-align: left;float: left;}
 .col_value_new { color: #990000 !important; text-decoration: blink !important;}
 .printed_logo {float: right; padding: 5px}
+.paid, .unpaid {font-weight: bolder;}
+.paid {color:#66CC66;}
+.unpaid {color:#cd0a0a;}
 
 
 /*Pages Typo...*/
