--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -13,11 +13,8 @@
     </ul>
 </div>
   </div>
-<div id="center_col" class="content no_right_sidebar">
-  <div id="show_layout">
- <div><%= render 'form' %></div>
-
-
-
+<div id="center_col" class="content w910">
+  <div id="show_layout" class="w910">
+ <%= render 'form' %>
 </div>
 </div>
