--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -8,8 +8,7 @@
   </div>
 <div id="center_col" class="content no_right_sidebar">
   <div id="show_layout">
-    <div class="center"></div>
-<div ><%= render 'form' %></div>
+<%= render 'form' %>
     </div>
     </div>
 
