--- a/app/views/invoices/_product_invoice_line.erb
+++ b/app/views/invoices/_product_invoice_line.erb
@@ -1,6 +1,7 @@
-<tr align="center" class="fields">
-      <td><%= f.number_field :qty, :size => 2 %></td>
-      <td align="left"><%= f.collection_select :product_id, Product.where("active = ?",true).order('description'), :id, :product_lookup, :include_blank => true  %></td>
-      <td align="left"><%= f.text_field :line_comment %></td>
-      <td><%= link_to_remove_fields f %></td>
-    </tr>
+
+<tr align="center" class=" <%= cycle :odd, :even %> fields">
+  <td><%= f.number_field :qty, :size => 2 %></td>
+  <td align="left"><%= f.collection_select :product_id, Product.where("active = ?", true).order('description'), :id, :product_lookup, :include_blank => true %></td>
+  <td align="left"><%= f.text_field :line_comment, :size => 50  %></td>
+  <td><%= link_to_remove_fields f %></td>
+</tr>
