--- a/app/views/work_orders/_pending_wo_tab.html.erb
+++ b/app/views/work_orders/_pending_wo_tab.html.erb
@@ -20,7 +20,7 @@
     <td><%= l pending.created_at, :format => :medium %> <%= t "global.by" %> <%= pending.created_by %></td>
     <td><%= l pending.updated_at, :format => :medium %> <%= t "global.by" %> <%= pending.edited_by %></td>
     <td><%= pending.assigned_to_username %></td>
-    <td align="center"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(pending.id) )%>&nbsp;
+    <td width="w140" align="center"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(pending.id) )%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(pending.id)) %>&nbsp;
         <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(pending.id), :confirm => [t 'alert.destroy'], :method => :delete ) %>
     </td>
