--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @invoice do |f| %>
-    <%= f.input :due_date, :as => :date %>
+    <%= f.input :due_date, :as => :date, :start_year => Date.today.year, :end_year => Date.today.year + 1 %>
     <a>Payment Terms:<%= Setting::default_invoice_terms %> Days NETT</a>
     <%= f.input :invoice_note, :input_html => {:rows => 5, :cols => 70, :value => Setting::default_invoice_note }  %>
     <h3 align="center">Service/Labour Charges</h3>
