--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -19,6 +19,7 @@ body {min-width:960px;height:auto;margin:0.9px;padding:0;border:0;vertical-align
 #reply_container {margin: 0 auto;}
 #reply {max-width: 100%; min-width:60%; padding:10px;}
 .reply_message {margin-left: 6.2em;}
+#invoice_description {margin: 0 auto; width:100%; text-align:center;}
 
 
 /*Typography*/
@@ -41,6 +42,10 @@ acronym:hover {cursor:help;}
 .col_value {padding-left:10px;width: 30%; text-align: left;float: left;}
 .col_value_new { color: #990000 !important; text-decoration: blink !important;}
 .printed_logo {float: right; padding: 5px}
+.paid, .unpaid, .overdue {font-weight: bolder;}
+.paid {color:#66CC66;}
+.overdue {color:#cd0a0a;}
+.unpaid {color: #0000FF;}
 
 
 /*Pages Typo...*/
@@ -177,14 +182,21 @@ input.select.required {border: 2px solid #8b0000; background-color:#ffffcc;font-
 .priority_main_5 td {background-color: #cc0033; font-weight:bolder;}
 
 /*Invoice Line Items Table CSS*/
-#invoice_line_items {border-collapse:collapse;line-height: normal;font-size:0.9em;}
-#invoice_line_items td {border: 1px solid #000066;padding:3px 7px 2px 7px;}
-#invoice_line_items td .no_border {border: none !important;}
-#invoice_line_items th {color: #ffffff;background-color: #4B7399;border: 1px solid #000066;padding:3px 7px 2px 7px;}
-#invoice_line_items td {color: #000000;}
-#invoice_line_items th a {color:#ccccff;}
-#invoice_line_items th a {color:#ccccff;}
-#invoice_line_items th .current {padding-right:14px;background: right center no-repeat;}
+.invoice_line_items {font-size:0.9em;width: 100%;overflow: hidden;padding:0;}
+.invoice_lines_even {background-color: #cedeed;}
+.invoice_lines_odd {background-color: #a4bacf;}
+.header {width: 100%;color: #ffffff;background-color:#4B7399 ;}
+.inline {display:inline-block;}
+.invoice_stamp {width:100%;position: absolute; font:55px monospace; text-transform: uppercase; }
+.overdue {color: #cc0033;}
+.invoice_line_items td {border: none;padding:3px 7px 2px 7px;}
+.invoice_line_items td .no_border {border: none !important;}
+.invoice_line_items th {color: #ffffff;background-color: #4B7399;border: 1px solid #000066;padding:3px 7px 2px 7px;}
+.invoice_line_items td {color: #000000;}
+.invoice_line_items th a {color:#ccccff;}
+.invoice_line_items th a {color:#ccccff;}
+.invoice_line_items th .current {padding-right:14px;background: right center no-repeat;}
+.invoice_line_items tr td input[type='text']{width:auto; min-width: 10px;}
 .clean input {border: none;background: none;}
 
 
@@ -235,6 +247,38 @@ caption {background:#eee;}
 legend {}
 fieldset, #IE8#HACK {padding-top:1.4em;}
 legend, #IE8#HACK {margin-top:0;margin-bottom:0;}
+
+
+.centered_text {text-align: center;}
+.fields {line-height:0.5em; padding: 0; margin:0;}
+.fields p {line-height:0.5em; padding: 1px; margin:0;}
+.boxed {border: 1px #cccccc solid}
+.w10 {width:10px}
+.w30 {width:30px}
+.w70 {width:70px}
+.w110 {width:110px}
+.w150 {width:150px}
+.w190 {width:190px}
+.w230 {width:230px}
+.w270 {width:270px}
+.w310 {width:310px}
+.w350 {width:350px}
+.w390 {width:390px}
+.w430 {width:430px}
+.w470 {width:470px}
+.w510 {width:510px}
+.w550 {width:550px}
+.w590 {width:590px}
+.w630 {width:630px}
+.w670 {width:670px}
+.w710 {width:710px}
+.w750 {width:750px}
+.w790 {width:790px}
+.w830 {width:830px}
+.w870 {width:870px}
+.w910 {width:910px}
+.w950 {width:950px; margin-right:0;}
+
 
 
 
